k8s/consumer/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: consumer
  labels:
    type: consumer-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        type: consumer-infra
    spec:
      containers:
        - name: postgres
          image: postgres:17.7-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-script
          configMap:
            name: postgres-init

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: consumer
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
