k8s/consumer/dataplane.yaml
#
# Consumer physical connector dataplane deployment + service + route
#

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataplane
  namespace: consumer
  labels:
    app: dataplane
    type: consumer-runtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataplane
  template:
    metadata:
      labels:
        app: dataplane
        platform: consumer
        type: consumer-runtime
    spec:
      containers:
        - name: dataplane
          image: ghcr.io/metaform/jad/dataplane@sha256:44e2c1d12127d6ef8bf06909e189bbc8e854cc2a485cfed94fb80d8e89ac14b1
          imagePullPolicy: Always
          ports:
            - containerPort: 11002
              name: public-port
            - containerPort: 1044
              name: debug-port
            - containerPort: 8083
              name: control-port
            - containerPort: 8186
              name: certs-port
            - containerPort: 8080
              name: health-port
          livenessProbe:
            httpGet:
              path: /api/check/liveness
              port: 8080
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/check/readiness
              port: 8080
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 30
          startupProbe:
            httpGet:
              path: /api/check/startup
              port: 8080
            failureThreshold: 10
            periodSeconds: 5
            timeoutSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: dataplane
  namespace: consumer
spec:
  type: ClusterIP
  selector:
    app: dataplane
  ports:
    - name: health
      port: 8080
      targetPort: 8080
    - name: control
      port: 8083
      targetPort: 8083
    - name: certs
      port: 8186
      targetPort: 8186
    - name: public
      port: 11002
      targetPort: 11002

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-dataplane
  namespace: consumer
spec:
  parentRefs:
    - name: consumer-gateway
      namespace: consumer
  hostnames:
    - dp.consumer.localhost
  rules:
    # /public → public port 11002
    - matches:
        - path:
            type: PathPrefix
            value: /public
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: dataplane
          port: 11002
          weight: 1

    # /app/internal → control port 8083
    - matches:
        - path:
            type: PathPrefix
            value: /app/internal
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: dataplane
          port: 8083
          weight: 1

    # /app/public → certs port 8186
    - matches:
        - path:
            type: PathPrefix
            value: /app/public
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: dataplane
          port: 8186
          weight: 1
